  * Remove obsolete dpkg --print-installation-architecture option.
  * Fix dpkg error messages when parsing md5sum files to include the package
    name affected.
  * Do not emit epochs for unambiguous versions in deb-split package header.
    Regression introduced in dpkg 1.18.0.
  * Make the deb-split(5) generation in dpkg-split reproducible, by using the
    timestamp from SOURCE_DATE_EPOCH.
  * Perl modules:
    - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
  * Packaging:
    - Add liblocale-gettext-perl to libdpkg-perl Recommends.
    - Wrap and document dependency relationships.
    - Remove obsolete dependency relationships, since Debian oldstable.
    - Remove update-alternatives, dpkg-divert and dpkg-statoverride
      compatibility symlinks, again.
    - Use perl:Depends via dh_perl instead of a hardcoded perl in Depends.
    - Remove unused dh_strip from binary_indep target.
    - Remove ancient upgrade code from maintainer scripts (before 1.15.x).
    - Stop compressing the dpkg.deb package with gzip.
  * Documentation:
    - Update custom changelog parser API support status in README.api.
    - Fix typos in docs and man pages. Thanks to Jakub Wilk <jwilk@debian.org>
      Closes: #834584
    - Fix formatting in SOURCE_DATE_EPOCH description in dpkg-deb(5).
    - Improve dpkg-deb --build arguments documentation in dpkg-deb(1).
      Prompted by Johannes Schauer <josch@debian.org>.
    - Document the .changes filename that dpkg-buildpackage generates in
      dpkg-buildpackage(1). Prompted by Johannes Schauer <josch@debian.org>.
    - Add basic maintainer script man pages: deb-postinst(5), deb-postrm(5),
      deb-preinst(5) and deb-prerm(5).
    - Add new deb-src-files(5) man page.
      Prompted by Johannes Schauer <josch@debian.org>.
    - Add man page references to other binary control files in dpkg(1).
    - Add version when "new" substvars were introduced in deb-substvars(5).