@@ -15,6 +15,8 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
     Regression introduced in dpkg 1.18.0.
   * Make the deb-split(5) generation in dpkg-split reproducible, by using the
     timestamp from SOURCE_DATE_EPOCH.
+  * Generate reproducible file modes for the .deb control member contents.
+    Closes: #787980
   * Perl modules:
     - Obsolete Source-Version substvar in Dpkg::Substvars by emitting errors.
   * Packaging:
